# codelib

./: .gitignore  README.md
ahk/: MsgGui.ahk  readme.md  soundControl.ahk
batch/: bookopen.bat  callCondaCmd.template.bat  callHashcat.bat  callJohn.bat  condaUpdateAll.bat  explorerSelectOpen.bat  mikTeXFix.bat  networkDisconnectAlert.bat  openWithExplorer.bat  pipup.bat  readme.md  runSageTeX.bat  selectThis.bat  updateSageTex.bat
cpp/: README.md
js/: AoC show full star ratio.js  AoC show star stats.js  Fix white screen on tikzcd-editor.js  Force zh locale on wikipedia.js  Get github repo size.js  HN highlight users.js  README.md  restrict google search result language.js
ps1/: getModifiedTimeOnDir.ps1  readme.md
py/: MorseCodeDict.py  ReplotOnZoom.py  alarm.py  ansiescape.py  bblToBib.py  bblToBib_re.py  checkFileIntegrity.py  checkVirusTotal.py  decodeClipboardQRCode.py  decodeMorseInWav.py  expandKaTeXMacro.py  expandMdMathMacro.py  extractBib.py  extractUMM.py  fetchDocMetadata.py  getExchangeRate.py  getFontList.py  getLinksInHTML.py  hxscript.py  ipythonInitScript.py  musicKeyboard.py  musicKeyboard_lefthand.py  musicKeyboard_re.py  npPylib.py  paperNameNormalizer.py  personalPylib.py  personalPylib_audio.py  personalPylib_np.py  pipPurge.py  pipRemovable.py  previewInTerm.py  previewLatex.py  previewLatex_sp.py  readme.md  wormholeQR.py
py/djvu2rga/: pyproject.toml
py/djvu2rga/src/djvu2rga/: __main__.py
r-rewrite/: Graph.Clustering.R  Graph.R  InfoTheory.R  InfoTheoryLib.R  LibImportTools.LegacyInterface.R  LibImportTools.R  MiscUtility.R  README.md  (+1 more)
(+43 files in other folders)
